--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,14 @@ name = "key-resolver"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
+bs58 = "0.5.1"
+ed25519-dalek = "2.1.1"
+fi-common = "0.0.1"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
+sha2 = "0.10.8"
+x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
