--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "key-resolver"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+authors = ["Ravindu Wijegunawardhana <ravindu.w@gmail.com>"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
